--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section>
       <div>
-        <form>
+        <form id="my-form">
           <p>
             <label for="personName">Name</label>
             <input type="text" name="personName">
